# safereturn

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py  settings.py
app/application/: errors.py
app/application/dto/: base.py
app/application/ports/clock/: clock_port.py
app/application/ports/delivery/: delivery_provider_port.py
app/application/ports/idgen/: id_generator_port.py
app/application/ports/notifications/: notification_port.py
app/application/ports/repositories/: audit_log_repository.py  conversation_repository.py  delivery_request_repository.py  finder_session_repository.py  item_repository.py  lost_report_repository.py  message_repository.py  tag_repository.py  user_repository.py
app/application/ports/security/: security_ports.py
app/application/ports/unit_of_work/: unit_of_work_port.py
app/application/use_cases/: _helpers.py  admin_batch_create_tags.py  auth_login.py  auth_logout.py  auth_refresh.py  auth_register.py  delivery_create_request.py  delivery_get_request.py  finder_get_messages.py  items_create.py  items_list.py  items_mark_found.py  items_mark_lost.py  owner_list_conversations.py  owner_send_message.py  public_create_finder_session.py  public_get_page.py  public_send_message.py  tags_claim.py
app/domain/: errors.py
app/domain/entities/: audit_log.py  base.py  conversation.py  delivery_request.py  finder_session.py  item.py  lost_report.py  message.py  sticker_pack.py  tag.py  user.py
app/domain/value_objects/: public_token.py
app/infrastructure/clock/: system_clock.py
app/infrastructure/db/: base.py  models.py  session.py  uow.py
app/infrastructure/delivery/: mock_provider.py
app/infrastructure/idgen/: uuid_id_generator.py
app/infrastructure/notifications/: mock_notifications.py
app/infrastructure/repositories/: in_memory_store.py  tag_repository.py  user_repository.py
app/infrastructure/security/: encryption.py  rate_limiter.py  tag_token_factory.py  token_service.py
app/interfaces/api/: exception_handlers.py
app/interfaces/api/middleware/: redaction.py
app/interfaces/api/v1/: dependencies.py
app/interfaces/templates/: public_page.html
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/app/db/: base.py  (+1 more)
apps/api/fastapi_fullstack_prod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_admin_flow.py  test_auth_flow.py  test_health.py  test_metrics.py  test_openapi.py  test_recovery_flow.py
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
docker/: README.md
docs/: 00-index.md  10-architecture-hld.md  20-architecture-lld.md  30-data-models.md  40-infra-runbook.md  50-cicd.md  60-safe-return-architecture-audit.md
infra/caddy/: Caddyfile
infra/linode/: DEPLOYMENT.md
infra/scripts/: backup_postgres.sh
scripts/: seed_tags.py
tests/: conftest.py
tests/integration/api/: test_api_contracts.py
tests/integration/db/: test_sqlalchemy_repositories.py
tests/unit/application/: test_refresh_token_hashing.py  test_use_case_flows.py
tests/unit/architecture/: test_import_boundaries.py
tests/unit/domain/: test_tag_and_message_invariants.py
tests/unit/infrastructure/: test_encryption.py  test_logging_redaction.py  test_rate_limiter.py
(+66 files in other folders)
