# Python project configuration for backend dependencies and quality tooling.
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-fullstack-prod"
version = "0.1.0"
description = "FastAPI + Preact production template"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Template Team" }]
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "gunicorn>=22.0.0",
  "httpx>=0.28.0",
  "prometheus-client>=0.21.0",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
  "email-validator>=2.2.0",
  "swagger-ui-bundle>=1.1.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.3",
  "types-passlib>=1.7.7.20240819",
  "types-python-jose>=3.4.0.20250224"
]

[tool.setuptools]
package-dir = { "" = "apps/api" }

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["apps/web/dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"apps/api/tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
plugins = []
mypy_path = ["apps/api"]
exclude = ["apps/web", "apps/api/alembic/versions", "apps/api/tests"]

[[tool.mypy.overrides]]
module = ["alembic.*", "passlib.*", "jose.*", "prometheus_client.*", "swagger_ui_bundle", "swagger_ui_bundle.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.api.tests.*", "app.tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["apps/api/app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
